Fix gap in summary sidebar border

--- a/projects/plugins/jetpack/_inc/client/recommendations/summary/style.scss
+++ b/projects/plugins/jetpack/_inc/client/recommendations/summary/style.scss
@@ -6,7 +6,7 @@
 	display: grid;
 	grid-template-columns: 57% 43%;
 
-	background: $white;
+	background: #e9eff5;
 
 	box-shadow: 0px 2px 6px rgba( 0, 0, 0, 0.03 ), 0px 1px 2px rgba( 0, 0, 0, 0.03 );
 	border: 1px solid $gray-lighten-20;
@@ -15,6 +15,10 @@
 		display: flex;
 		flex-direction: column;
 	}
+}
+
+.jp-recommendations-summary__content {
+	background: $white;
 }
 
 .jp-recommendations-summary__configuration {
@@ -30,7 +34,6 @@
 }
 
 .jp-recommendations-summary__sidebar {
-	background: #e9eff5;
 	border-left: 1px solid #d5d5d5;
 	padding: 24px;
 
